--- a/canvas3.html
+++ b/canvas3.html
@@ -5,20 +5,26 @@
     <title>Document</title>
 <style>
 *{margin:0;padding:0;}
-    body{background:#000;}        
-    #canvas{background:#fff;}
+
+
     span{color:#fff;}
 </style>    
 <script>
     window.onload = function(){
         var oC = document.getElementById('canvas');
         var oGc = oC.getContext('2d');
-        oGc.beginPath();
-        oGc.moveTo(100,100);
-        oGc.lineTo(200,200);
-        oGc.lineTo(300,200);
-        oGc.closePath(100,100);
-        oGc.stroke();
+//        oGc.beginPath();
+//        oGc.moveTo(100,100);
+//        oGc.lineTo(200,200);
+//        oGc.lineTo(300,200);
+//        oGc.closePath(100,100);
+//        oGc.stroke();
+        oGc.fillStyle = 'red';
+        //oGc.rotate(45)   //旋转
+        //oGc.translate(10,15)   //移动
+        //oGc.scale(0.5,0.5);    //缩放
+
+        oGc.fillRect(0,0,400,400);
     }
 </script>
 </head>
